tests/integration/records/errors/quantified-constraint-violation/main.cx
fun f(x: {...: String}) {
}

fun main() {
  f({prop: 10})
}
